--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ criterion = "0.3"
 rand_core = "0.6"
 
 [[bench]]
+name = "anemoi-64-8-4"
+harness = false
+required-features = ["f64"]
+
+[[bench]]
 name = "rescue-64-8-4"
 harness = false
 required-features = ["f64"]
